# font-rs

./: .travis.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
benches/: glyph.rs  raster.rs
examples/: draw_shape.rs  render.rs
fonts/kosugi_maru/: README
misc/: README.md
src/: accumulate.c  accumulate.rs  cumsum.cpp  font.rs  geom.rs  lib.rs  macros.rs  raster.rs  showttf.rs
tests/: raster_issues.rs
