[package]
name = "font-rs"
version = "0.1.1"
license = "Apache-2.0"
authors = [ "Raph Levien <raph@google.com>" ]
keywords = ["font", "truetype", "ttf"]
description = "A font renderer written (mostly) in pure, safe Rust"
repository = "https://github.com/google/font-rs"
build = "build.rs"

[features]
sse = []

[build-dependencies]
gcc = "0.3"
